--- a/index.html
+++ b/index.html
@@ -128,16 +128,14 @@
              data-infinite="true"
              data-fade="true"
              data-speed="5000">
-          <div class="js-slide g-bg-img-hero g-height-100vh" style="background-image: url(assets/img-temp/1600x1060/img1.jpg);"></div>
-
-          <div class="js-slide g-bg-img-hero g-height-100vh" style="background-image: url(assets/img-temp/1600x1060/img2.jpg);"></div>
+          <div class="js-slide g-bg-img-hero g-height-100vh" style="background-image: url(assets/img/background/clouds.jpg);"></div>
         </div>
 
         <div class="u-bg-overlay__inner g-absolute-centered w-100">
           <div class="container text-center g-max-width-750">
             <div class="text-uppercase u-heading-v2-4--bottom u-promo-title g-brd-primary">
-              <h3 class="h3 g-letter-spacing-7 g-font-size-12 g-font-weight-400 g-color-white g-mb-25">Architecture company</h3>
-              <h2 class="u-heading-v2__title g-line-height-1 g-letter-spacing-3 g-font-size-75 g-color-white mb-0">We are Unify</h2>
+              <h3 class="h3 g-letter-spacing-7 g-font-size-12 g-font-weight-400 g-color-white g-mb-25">Cloud developers and system engineers</h3>
+              <h2 class="u-heading-v2__title g-line-height-1 g-letter-spacing-3 g-font-size-75 g-color-white mb-0">We are Skyworkz</h2>
             </div>
           </div>
         </div>
