--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
       <section id="about" class="g-pt-100 g-pb-100--md">
         <div class="container text-center g-max-width-750 g-mb-70">
           <div class="text-uppercase u-heading-v2-4--bottom g-brd-primary">
-            <h3 class="h3 g-letter-spacing-5 g-font-size-12 g-font-weight-400 g-color-primary g-mb-25">What we offer</h3>
-            <h2 class="u-heading-v2__title g-line-height-1 g-letter-spacing-2 g-font-size-30 g-font-size-40--md mb-0">All for your comfort</h2>
+            <h2 class="h2 g-letter-spacing-5 g-font-size-12 g-font-weight-400 g-color-primary g-mb-25">Cloud Strategy</h2>
+              <h4 class="u-heading-v2__title g-line-height-1 g-letter-spacing-2 g-font-size-18 g-font-size-18--md mb-0">THINGS WORK DIFFERENTLY IN THE CLOUD - WE KNOW HOW. At Skyworkz we have engineers and developers that know what works and what doesn’t work in the cloud. For AWS, Google Cloud or Azure.</h4>
           </div>
         </div>
 
@@ -160,9 +160,9 @@
                   <span class="d-block g-line-height-1 g-font-size-30 g-color-primary g-mb-20">
                     <i class="icon-picture"></i>
                   </span>
-                  <h3 class="text-uppercase g-line-height-1_2 g-font-weight-700 g-color-white g-mb-25">Exterior <br> Design</h3>
-                  <p class="g-font-size-13 g-color-white-opacity-0_7 g-mb-30">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Omom sociis natoque penatibus.</p>
-                  <a href="#!" class="text-uppercase g-font-weight-700 g-font-size-11 g-text-underline--none--hover">Read More</a>
+                  <h3 class="text-uppercase g-line-height-1_2 g-font-weight-700 g-color-white g-mb-25">CLOUD <br> INFRASTRUCTURE</h3>
+                  <p class="g-font-size-13 g-color-white-opacity-0_7 g-mb-30">On-premise infrastructure is static. Servers are dedicated, have fixed IP addresses, and we can work with clear network boundaries.</p>
+                  <p class="g-font-size-13 g-color-white-opacity-0_7 g-mb-30">In the cloud everything is dynamic. We have short lived applications and servers, no fixed network perimeters. No Load balancers, but autoscaling containers. Infrastructure needs to be coded – not configured in order to be able to change or add new infrastructure fast and reliable. All our Cloud specialists are programmers: When the infrastructure needs to change, we change the code.</p>
                 </div>
               </div>
             </div>
