--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
                   <span class="d-block g-line-height-1 g-font-size-30 g-color-primary g-mb-20">
                     <i class="icon-loop"></i>
                   </span>
-                  <h3 class="text-uppercase g-line-height-1_2 g-font-weight-700 g-color-white g-mb-25">Interior <br> Design</h3>
-                  <p class="g-font-size-13 g-color-white-opacity-0_7 g-mb-30">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Omom sociis natoque penatibus.</p>
-                  <a href="#!" class="text-uppercase g-font-weight-700 g-font-size-11 g-text-underline--none--hover">Read More</a>
+                  <h3 class="text-uppercase g-line-height-1_2 g-font-weight-700 g-color-white g-mb-25">CLOUD <br> ARCHITECTURE</h3>
+                  <p class="g-font-size-13 g-color-white-opacity-0_7 g-mb-30">On-premise we have learned how to build microservice architectures that are resilient, responsive and scalable, but also more complex.</p>
+                  <p class="g-font-size-13 g-color-white-opacity-0_7 g-mb-30">The cloud embraces containers and serverless technologies taking over a lot of the complexity and heavy lifting needed to implement truly resilient and scalable microservice architectures. Cost models are different and cloud services operate differently. Our cloud specialists know how to define resilient high available architectures with decoupling mechanisms using cloud services that are cost efficient.</p>
                 </div>
               </div>
             </div>
@@ -186,9 +186,10 @@
                   <span class="d-block g-line-height-1 g-font-size-30 g-color-primary g-mb-20">
                     <i class="icon-note"></i>
                   </span>
-                  <h3 class="text-uppercase g-line-height-1_2 g-font-weight-700 g-color-white g-mb-25">Project <br> Documentation</h3>
-                  <p class="g-font-size-13 g-color-white-opacity-0_7 g-mb-30">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Omom sociis natoque penatibus.</p>
-                  <a href="#!" class="text-uppercase g-font-weight-700 g-font-size-11 g-text-underline--none--hover">Read More</a>
+                  <h3 class="text-uppercase g-line-height-1_2 g-font-weight-700 g-color-white g-mb-25">CLOUD <br> ECOSYSTEM</h3>
+                  <p class="g-font-size-13 g-color-white-opacity-0_7 g-mb-30">On-premise we either buy or build or systems. Use 3rd party software or build proprietary applications to our needs.  Reuse mainly consists of open-source libraries.</p>
+                  <p class="g-font-size-13 g-color-white-opacity-0_7 g-mb-30">In the public cloud a possibility of ever growing managed and cloud unique services open up – offering your company a uniquely flexible approach of buying and building your own cloud applications – so developers can focus on delivering business value instead of maintaining middleware services like message queues or CI/CD pipelines.</p>
+                  <br>
                 </div>
               </div>
             </div>
@@ -199,8 +200,9 @@
                   <span class="d-block g-line-height-1 g-font-size-30 g-color-primary g-mb-20">
                     <i class="icon-map"></i>
                   </span>
-                  <h3 class="text-uppercase g-line-height-1_2 g-font-weight-700 g-color-white g-mb-25">Choice of <br> Land</h3>
-                  <p class="g-font-size-13 g-color-white-opacity-0_7 g-mb-30">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Omom sociis natoque penatibus.</p>
+                  <h3 class="text-uppercase g-line-height-1_2 g-font-weight-700 g-color-white g-mb-25">TRUE <br> DEVOPS</h3>
+                  <p class="g-font-size-13 g-color-white-opacity-0_7 g-mb-30">On-premise we have learned how to take the first baby steps with DevOps. Teams that deliver business value and at the same time ensure that the applications run stable in production. But where do we find these jack of all trades?</p>
+                  <p class="g-font-size-13 g-color-white-opacity-0_7 g-mb-30">The cloud takes over a lot of responsibility for running applications smoothly, we don’t need a whole Operations department. And the team gains free time to properly implement Security right from the start ensuring a true DevOPS way of working. </p>
                   <a href="#!" class="text-uppercase g-font-weight-700 g-font-size-11 g-text-underline--none--hover">Read More</a>
                 </div>
               </div>
