--- a/index.html
+++ b/index.html
@@ -188,8 +188,7 @@
                   </span>
                   <h3 class="text-uppercase g-line-height-1_2 g-font-weight-700 g-color-white g-mb-25">CLOUD <br> ECOSYSTEM</h3>
                   <p class="g-font-size-13 g-color-white-opacity-0_7 g-mb-30">On-premise we either buy or build or systems. Use 3rd party software or build proprietary applications to our needs.  Reuse mainly consists of open-source libraries.</p>
-                  <p class="g-font-size-13 g-color-white-opacity-0_7 g-mb-30">In the public cloud a possibility of ever growing managed and cloud unique services open up – offering your company a uniquely flexible approach of buying and building your own cloud applications – so developers can focus on delivering business value instead of maintaining middleware services like message queues or CI/CD pipelines.</p>
-                  <br>
+                  <p class="g-font-size-13 g-color-white-opacity-0_7 g-mb-30">In the public cloud a possibility of ever growing managed and cloud unique services open up – offering your company a uniquely flexible approach of buying and building your own cloud applications – so developers can focus on delivering business value instead of maintaining middleware services like message queues or continuous deployment and integration pipelines.</p>
                 </div>
               </div>
             </div>
@@ -202,8 +201,7 @@
                   </span>
                   <h3 class="text-uppercase g-line-height-1_2 g-font-weight-700 g-color-white g-mb-25">TRUE <br> DEVOPS</h3>
                   <p class="g-font-size-13 g-color-white-opacity-0_7 g-mb-30">On-premise we have learned how to take the first baby steps with DevOps. Teams that deliver business value and at the same time ensure that the applications run stable in production. But where do we find these jack of all trades?</p>
-                  <p class="g-font-size-13 g-color-white-opacity-0_7 g-mb-30">The cloud takes over a lot of responsibility for running applications smoothly, we don’t need a whole Operations department. And the team gains free time to properly implement Security right from the start ensuring a true DevOPS way of working. </p>
-                  <a href="#!" class="text-uppercase g-font-weight-700 g-font-size-11 g-text-underline--none--hover">Read More</a>
+                  <p class="g-font-size-13 g-color-white-opacity-0_7 g-mb-30">The cloud takes over a lot of responsibility for running applications smoothly, we do not require a whole Operations department. The team gains free time to properly implement Security correctly from the start ensuring a true DevOps way of working. </p>
                 </div>
               </div>
             </div>
