change contact info

--- a/index.html
+++ b/index.html
@@ -1117,13 +1117,13 @@
                   <div class="col-sm-4 col-md-12 g-mb-30">
                     <i class="icon-directions icon d-inline-block g-font-size-20 g-color-primary g-mb-7"></i>
                     <h3 class="text-uppercase g-font-size-12 g-color-gray-dark-v5 g-font-weight-400 g-mb-5">Address</h3>
-                    <strong class="g-font-size-14 g-color-black">Sit amet adipiscing</strong>
+                    <strong class="g-font-size-14 g-color-black">Tractieweg 41, 3534 AP Utrecht</strong>
                   </div>
 
                   <div class="col-sm-4 col-md-12 g-mb-30">
                     <i class="icon-call-in icon d-inline-block g-font-size-20 g-color-primary g-mb-7"></i>
                     <h3 class="text-uppercase g-font-size-12 g-color-gray-dark-v5 g-font-weight-400g-mb-5">Phone number</h3>
-                    <strong class="g-font-size-14 g-color-black">+4586 585 4580</strong>
+                    <strong class="g-font-size-14 g-color-black">+31 6 1049 2044</strong>
                   </div>
 
                   <div class="col-sm-4 col-md-12">
