Add services section

--- a/index.html
+++ b/index.html
@@ -289,74 +289,20 @@
       <section id="services" class="g-py-100">
         <div class="container text-center g-max-width-750 g-mb-70">
           <div class="text-uppercase u-heading-v2-4--bottom g-brd-primary">
-            <h3 class="h3 g-letter-spacing-5 g-font-size-12 g-font-weight-400 g-color-primary g-mb-25">Work process</h3>
-            <h2 class="u-heading-v2__title g-line-height-1 g-letter-spacing-2 g-font-size-30 g-font-size-40--md mb-0">How we work</h2>
+            <h3 class="h3 g-letter-spacing-5 g-font-size-12 g-font-weight-400 g-color-primary g-mb-25">What do we offer to our clients?</h3>
+            <h2 class="u-heading-v2__title g-line-height-1 g-letter-spacing-2 g-font-size-30 g-font-size-40--md mb-0">Services</h2>
           </div>
         </div>
 
         <div class="container">
           <div id="processesTabs" class="tab-content container g-width-630 g-pb-50 g-pb-100--md">
-            <div class="tab-pane fade show active" id="discuss" role="tabpanel">
-              <div class="js-carousel g-pb-40"
-                   data-infinite="true"
-                   data-pagi-classes="u-carousel-indicators-v1 g-absolute-centered--x g-bottom-0 text-center">
-                <div class="js-slide">
-                  <img class="img-fluid g-mb-40" src="assets/img-temp/1024x683/img11.jpg" alt="Image description">
 
-                  <div class="container text-center g-max-width-550">
-                    <h4 class="text-uppercase g-font-weight-700 g-font-size-18 g-mb-15">Projects of resdential buildings</h4>
-                    <p class="g-font-size-default mb-0">Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Etiam sit amet orci eget eros.</p>
-                  </div>
-                </div>
-
-                <div class="js-slide">
-                  <img class="img-fluid g-mb-40" src="assets/img-temp/1024x683/img12.jpg" alt="Image description">
-
-                  <div class="container text-center g-max-width-550">
-                    <h4 class="text-uppercase g-font-weight-700 g-font-size-18 g-mb-15">Projects of resdential buildings</h4>
-                    <p class="g-font-size-default mb-0">Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Etiam sit amet orci eget eros.</p>
-                  </div>
-                </div>
-
-                <div class="js-slide">
-                  <img class="img-fluid g-mb-40" src="assets/img-temp/1024x683/img13.jpg" alt="Image description">
-
-                  <div class="container text-center g-max-width-550">
-                    <h4 class="text-uppercase g-font-weight-700 g-font-size-18 g-mb-15">Projects of resdential buildings</h4>
-                    <p class="g-font-size-default mb-0">Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Etiam sit amet orci eget eros.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="tab-pane fade" id="creativeConcept" role="tabpanel">
-              <img class="img-fluid g-mb-40" src="assets/img-temp/1024x683/img14.jpg" alt="Image description">
-
+            <div class="tab-content" id="creativeConcept" role="tabpanel">
               <div class="container text-center g-max-width-550">
-                <h4 class="text-uppercase g-font-weight-700 g-font-size-18 g-mb-15">Projects of resdential buildings</h4>
-                <p class="g-font-size-default mb-0">Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Etiam sit amet orci eget eros.</p>
-              </div>
-            </div>
-
-            <div class="tab-pane fade" id="modeling3D" role="tabpanel">
-              <img class="img-fluid g-mb-40" src="assets/img-temp/1024x683/img15.jpg" alt="Image description">
-
-              <div class="container text-center g-max-width-550">
-                <h4 class="text-uppercase g-font-weight-700 g-font-size-18 g-mb-15">Projects of resdential buildings</h4>
-                <p class="g-font-size-default mb-0">Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Etiam sit amet orci eget eros.</p>
-              </div>
-            </div>
-
-            <div class="tab-pane fade" id="happyClients" role="tabpanel">
-              <img class="img-fluid g-mb-40" src="assets/img-temp/1024x683/img16.jpg" alt="Image description">
-
-              <div class="container text-center g-max-width-550">
-                <h4 class="text-uppercase g-font-weight-700 g-font-size-18 g-mb-15">Projects of resdential buildings</h4>
-                <p class="g-font-size-default mb-0">Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Etiam sit amet orci eget eros.</p>
+                <p class="g-font-size-default mb-0">At Skyworkz we work with a cloud maturity model which looks at where you are in your journey to the cloud. Change is hard, but even harder when you don’t know where you are right now. We recognize three major phases companies can reach in their journey to the cloud.</p>
               </div>
             </div>
           </div>
-
           <!-- Nav tabs -->
           <ul class="nav nav-fill text-center justify-content-center flex-md-nowrap u-nav-v8-2" role="tablist"
               data-target="nav-8-2-primary-hor-center"
@@ -365,37 +311,37 @@
             <li class="nav-item">
               <a class="nav-link active" data-toggle="tab" href="#discuss" role="tab">
                 <span class="u-nav-v8__icon u-icon-v3 u-icon-size--lg g-font-size-20 g-rounded-50x g-brd-around g-brd-4 g-brd-white">
-                  <i class="fa fa-coffee"></i>
+                  <i class="icon-line icon-bulb g-font-size-35"></i>
                 </span>
-                <strong class="text-uppercase u-nav-v8__title g-font-size-13 g-mb-5">Discuss</strong>
-                <em class="u-nav-v8__description g-color-white-opacity-0_5">Lorem ipsum dolor sit amet.</em>
+                <strong class="text-uppercase u-nav-v8__title g-font-size-13 g-mb-5">Take-off: What happens in the cloud?</strong>
+                <em class="u-nav-v8__description g-color-white-opacity-0_5">You want to get hands on experience, so you can learn – with coding, deploying, maintaining, architecture, way of working.</em>
+                <p>&nbsp;</p>
+                <strong class="text-uppercase u-nav-v8__title g-font-size-13 g-mb-5"> We offer: </strong>
+                <em class="u-nav-v8__description g-color-white-opacity-0_5">Cloud native developers, who can coach your teams getting started in the cloud.</em>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" data-toggle="tab" href="#creativeConcept" role="tab">
                 <span class="u-nav-v8__icon u-icon-v3 u-icon-size--lg g-font-size-20 g-rounded-50x g-brd-around g-brd-4 g-brd-white">
-                  <i class="fa fa-pencil"></i>
+                  <i class="icon-line icon-plane g-font-size-35"></i>
                 </span>
-                <strong class="text-uppercase u-nav-v8__title g-font-size-13 g-mb-5">Creative concept</strong>
-                <em class="u-nav-v8__description g-color-white-opacity-0_5">Lorem ipsum dolor sit amet.</em>
+                <strong class="text-uppercase u-nav-v8__title g-font-size-13 g-mb-5">Climbing: How do we make full use of the cloud?</strong>
+                <em class="u-nav-v8__description g-color-white-opacity-0_5">You want to develop an ecosystem which fully takes advantage of the cloud by using value-added managed services of the cloud. Understanding how and when to avoid vendor lock-in.</em>
+                <p>&nbsp;</p>
+                <strong class="text-uppercase u-nav-v8__title g-font-size-13 g-mb-5"> We offer: </strong>
+                <em class="u-nav-v8__description g-color-white-opacity-0_5">Cloud native developers and CloudOps engineers who can coach team members in utilising the cloud even better.</em>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" data-toggle="tab" href="#modeling3D" role="tab">
                 <span class="u-nav-v8__icon u-icon-v3 u-icon-size--lg g-font-size-20 g-rounded-50x g-brd-around g-brd-4 g-brd-white">
-                  <i class="fa fa-picture-o"></i>
+                  <i class="icon-line icon-flag g-font-size-35"></i>
                 </span>
-                <strong class="text-uppercase u-nav-v8__title g-font-size-13 g-mb-5">3D modeling</strong>
-                <em class="u-nav-v8__description g-color-white-opacity-0_5">Lorem ipsum dolor sit amet.</em>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" data-toggle="tab" href="#happyClients" role="tab">
-                <span class="u-nav-v8__icon u-icon-v3 u-icon-size--lg g-font-size-20 g-rounded-50x g-brd-around g-brd-4 g-brd-white">
-                  <i class="fa fa-heart"></i>
-                </span>
-                <strong class="text-uppercase u-nav-v8__title g-font-size-13 g-mb-5">Happy clients</strong>
-                <em class="u-nav-v8__description g-color-white-opacity-0_5">Lorem ipsum dolor sit amet.</em>
+                <strong class="text-uppercase u-nav-v8__title g-font-size-13 g-mb-5">Cruising: How do we ensure quality?</strong>
+                <em class="u-nav-v8__description g-color-white-opacity-0_5">You have already some experience and maybe a couple of teams already delivered some cloud applications. Now everything has to come together in a secure, scalable, monitored and maintained cloud environment – which is cost optimized. </em>
+                <p>&nbsp;</p>
+                <strong class="text-uppercase u-nav-v8__title g-font-size-13 g-mb-5"> We offer: </strong>
+                <em class="u-nav-v8__description g-color-white-opacity-0_5">Cloud native developers and CloudOps engineers who can ensure you utilize the cloud in the best possible way.</em>
               </a>
             </li>
           </ul>
