--- a/index.html
+++ b/index.html
@@ -405,120 +405,139 @@
       <!-- End Section Content -->
 
       <!-- Section Content -->
-      <section id="technologies" class="g-theme-bg-blue-dark-v1 g-py-100">
-        <div class="container text-center g-max-width-750 g-mb-50">
+      <section id="Career" class="g-theme-bg-blue-dark-v1 g-py-100">
+        <div class="container text-center u-bg-overlay__inner g-max-width-770 g-mb-30 g-mb-70--md">
           <div class="text-uppercase u-heading-v2-4--bottom g-brd-primary g-mb-30">
-            <h3 class="h3 g-letter-spacing-5 g-font-size-12 g-font-weight-400 g-color-primary g-mb-25">Our technologies</h3>
-            <h2 class="u-heading-v2__title g-line-height-1 g-letter-spacing-2 g-font-size-30 g-font-size-40--md g-color-white mb-0">How we create</h2>
+            <h3 class="g-font-weight-700 g-font-size-12 g-color-primary g-mb-20">CAREER</h3>
+            <h2 class="u-heading-v2__title g-line-height-1 g-letter-spacing-2 g-font-weight-700 g-font-size-30 g-font-size-40--md g-color-white mb-0">WORKING AT SKYWORKZ</h2>
           </div>
-
-          <p class="g-color-white-opacity-0_5 mb-0">Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
         </div>
 
-        <div class="container-fluid px-0">
-          <div class="js-carousel g-pb-10"
-               data-slides-show="3"
-               data-slides-scroll="3"
-               data-infinite="true"
-               data-pagi-classes="u-carousel-indicators-v1 u-carousel-indicators-dark g-absolute-centered--x g-bottom-0 text-center"
-               data-responsive='[{
-                 "breakpoint": 1200,
-                 "settings": {
-                   "slidesToShow": 3,
-                   "slidesToScroll": 3
-                 }
-               }, {
-                 "breakpoint": 768,
-                 "settings": {
-                   "slidesToShow": 2,
-                   "slidesToScroll": 2
-                 }
-               }, {
-                 "breakpoint": 576,
-                 "settings": {
-                   "slidesToShow": 1,
-                   "slidesToScroll": 1
-                 }
-               }]'>
-            <div class="js-slide">
-              <img class="img-fluid" src="assets/img-temp/1024x574/img1.jpg" alt="Image description">
-
-              <div class="text-center g-pa-40">
-                <h4 class="h6 text-uppercase g-font-weight-700 g-color-white g-mb-15">Projects of resdential buildings</h4>
-                <p class="g-font-size-default g-color-white-opacity-0_5 mb-0">Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
-              </div>
+        <div class="container u-bg-overlay__inner">
+          <div class="row">
+            <div class="col-md-3">
+              <!-- Nav tabs -->
+              <ul class="nav flex-column text-uppercase u-nav-v1-1 u-nav-primary g-font-weight-700 g-font-size-11" role="tablist"
+                  data-target="workProcessTabs"
+                  data-tabs-mobile-type="accordion"
+                  data-btn-classes="btn btn-md btn-block text-uppercase u-btn-outline-primary g-font-weight-700 rounded-0 g-mb-20">
+                <li class="nav-item g-mb-10">
+                  <a class="nav-link active" data-toggle="tab" href="#userInterfase" role="tab">What will you be doing?</a>
+                </li>
+                <li class="nav-item g-mb-10">
+                  <a class="nav-link" data-toggle="tab" href="#identityAndBranding" role="tab">Roles</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" data-toggle="tab" href="#webDesign" role="tab">Our offer </a>
+                </li>
+              </ul>
+              <!-- End Nav tabs -->
             </div>
 
-            <div class="js-slide">
-              <img class="img-fluid" src="assets/img-temp/1024x574/img2.jpg" alt="Image description">
+            <div class="col-md-9">
+              <!-- Tab panes -->
+              <div id="workProcessTabs" class="tab-content">
+                <div id="userInterfase" class="tab-pane fade g-mb-20 g-mb-0--md show active" role="tabpanel">
+                  <img class="img-fluid g-mb-30" src="assets/img-temp/900x372/img1.jpg" alt="Image description">
 
-              <div class="text-center g-pa-40">
-                <h4 class="h6 text-uppercase g-font-weight-700 g-color-white g-mb-15">Projects of resdential buildings</h4>
-                <p class="g-font-size-default g-color-white-opacity-0_5 mb-0">Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
+                  <div class="row">
+                    <div class="col-md-4 g-mb-20 g-mb-0--md">
+                      <div class="media g-parent g-mb-15">
+                        <div class="d-flex align-self-center g-mr-15">
+                          <span class="u-icon-v2 g-width-40 g-height-40 g-color-gray-dark-v4 g-brd-4 g-theme-brd-gray-dark-v3 g-brd-primary--parent-hover rounded-circle">
+                            <i class="g-font-style-normal g-font-weight-700 g-font-size-default g-color-primary">1</i>
+                          </span>
+                        </div>
+
+                        <div class="media-body align-self-center">
+                          <h3 class="h6 text-uppercase g-font-weight-700 g-font-secondary g-color-white mb-0">Explore the cloud</h3>
+                        </div>
+                      </div>
+
+                      <p class="g-line-height-1_4 mb-0">As always, it depends on the clients and how mature they are using the cloud. Clients that are still busy with doing research about the cloud or busy with lift and shift are not really what we are about. We’ll help them to explore the real business benefits of the cloud and get them on the right path to the cloud. </p>
+                    </div>
+
+                    <div class="col-md-4 g-mb-20 g-mb-0--md">
+                      <div class="media g-parent g-mb-15">
+                        <div class="d-flex align-self-center g-mr-15">
+                          <span class="u-icon-v2 g-width-40 g-height-40 g-color-gray-dark-v4 g-brd-4 g-theme-brd-gray-dark-v3 g-brd-primary--parent-hover rounded-circle">
+                            <i class="g-font-style-normal g-font-weight-700 g-font-size-default g-color-primary">2</i>
+                          </span>
+                        </div>
+
+                        <div class="media-body align-self-center">
+                          <h3 class="h6 text-uppercase g-font-weight-700 g-font-secondary g-color-white mb-0">coding ,coding , coding</h3>
+                        </div>
+                      </div>
+
+                      <p class="g-line-height-1_4 mb-0">It becomes interesting when they really want to take advantage of the cloud (“Why don’t I let Amazon manage my database?”). Skyworkz developers and engineers help teams to transform their software architecture, while Skyworkz engineers code the infrastructure and set-up all the necessary DevOps cloud instruments, probably also as part of a team.
+                        <br>
+                        <br>
+                      Skyworkerz both know how to explain cloud advantages to business stakeholders and how to motivate teams to transform into DevOps teams in the cloud. </p>
+                    </div>
+
+                    <div class="col-md-4">
+                      <div class="media g-parent g-mb-15">
+                        <div class="d-flex align-self-center g-mr-15">
+                          <span class="u-icon-v2 g-width-40 g-height-40 g-color-gray-dark-v4 g-brd-4 g-theme-brd-gray-dark-v3 g-brd-primary--parent-hover rounded-circle">
+                            <i class="g-font-style-normal g-font-weight-700 g-font-size-default g-color-primary">3</i>
+                          </span>
+                        </div>
+
+                        <div class="media-body align-self-center">
+                          <h3 class="h6 text-uppercase g-font-weight-700 g-font-secondary g-color-white mb-0">DevOps</h3>
+                        </div>
+                      </div>
+
+                      <p class="g-line-height-1_4 mb-0">But what we really are about are Clients that have incorporated the cloud into their engineering culture. This is the environment in which we thrive. And work long term in DevOps teams. As cloud native developers we code and maintain applications DevOps style, as cloud native engineers we code and maintain the infrastructure and teams DevOps style.</p>
+                    </div>
+                  </div>
+                </div>
+
+                <div id="identityAndBranding" class="tab-pane fade g-mb-20 g-mb-0--md" role="tabpanel">
+                  <img class="img-fluid g-mb-30" src="assets/img-temp/900x372/img2.jpg" alt="Image description">
+
+                  <div class="row">
+                    <div class="col-md-6 g-mb-20 g-mb-0--md">
+                      <div class="media g-parent g-mb-15">
+                        <div class="d-flex align-self-center g-mr-15">
+                          <span class="u-icon-v2 g-width-40 g-height-40 g-color-gray-dark-v4 g-brd-4 g-theme-brd-gray-dark-v3 g-brd-primary--parent-hover rounded-circle">
+                            <i class="g-font-style-normal g-font-weight-700 g-font-size-default g-color-primary">1</i>
+                          </span>
+                        </div>
+
+                        <div class="media-body align-self-center">
+                          <h3 class="h6 text-uppercase g-font-weight-700 g-font-secondary g-color-white mb-0">Discuss with client</h3>
+                        </div>
+                      </div>
+
+                      <p class="g-line-height-1_4 mb-0">Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus. Vestibulum fringilla velit rhoncus euismod rhoncus turpis. Donec vel pharetra tellus. Sed non est lacus.</p>
+                    </div>
+
+                    <div class="col-md-6">
+                      <div class="media g-parent g-mb-15">
+                        <div class="d-flex align-self-center g-mr-15">
+                          <span class="u-icon-v2 g-width-40 g-height-40 g-color-gray-dark-v4 g-brd-4 g-theme-brd-gray-dark-v3 g-brd-primary--parent-hover rounded-circle">
+                            <i class="g-font-style-normal g-font-weight-700 g-font-size-default g-color-primary">2</i>
+                          </span>
+                        </div>
+
+                        <div class="media-body align-self-center">
+                          <h3 class="h6 text-uppercase g-font-weight-700 g-font-secondary g-color-white mb-0">Wireframe</h3>
+                        </div>
+                      </div>
+
+                      <p class="g-line-height-1_4 mb-0">Cras sit amet varius velit. Maecenas porta condimentum tortor at sagittis. Cum sociis natoque penatibus et magnis dis. Donec vel pharetra tellus. Sed non est lacus.</p>
+                    </div>
+                  </div>
+                </div>
+
+                <div id="webDesign" class="tab-pane fade" role="tabpanel">
+                  <img class="img-fluid g-mb-30" src="assets/img-temp/900x372/img3.jpg" alt="Image description">
+                  <p class="g-line-height-1_4 mb-0">Sed feugiat porttitor nunc, non dignissim ipsum vestibulum in. Donec in blandit dolor. Vivamus a fringilla lorem, vel faucibus ante. Nunc ullamcorper, justo a iaculis elementum, enim orci viverra eros, fringilla porttitor lorem eros vel odio.</p>
+                </div>
               </div>
-            </div>
-
-            <div class="js-slide">
-              <img class="img-fluid" src="assets/img-temp/1024x574/img3.jpg" alt="Image description">
-
-              <div class="text-center g-pa-40">
-                <h4 class="h6 text-uppercase g-font-weight-700 g-color-white g-mb-15">Projects of resdential buildings</h4>
-                <p class="g-font-size-default g-color-white-opacity-0_5 mb-0">Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
-              </div>
-            </div>
-
-            <div class="js-slide">
-              <img class="img-fluid" src="assets/img-temp/1024x574/img4.jpg" alt="Image description">
-
-              <div class="text-center g-pa-40">
-                <h4 class="h6 text-uppercase g-font-weight-700 g-color-white g-mb-15">Projects of resdential buildings</h4>
-                <p class="g-font-size-default g-color-white-opacity-0_5 mb-0">Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
-              </div>
-            </div>
-
-            <div class="js-slide">
-              <img class="img-fluid" src="assets/img-temp/1024x574/img5.jpg" alt="Image description">
-
-              <div class="text-center g-pa-40">
-                <h4 class="h6 text-uppercase g-font-weight-700 g-color-white g-mb-15">Projects of resdential buildings</h4>
-                <p class="g-font-size-default g-color-white-opacity-0_5 mb-0">Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
-              </div>
-            </div>
-
-            <div class="js-slide">
-              <img class="img-fluid" src="assets/img-temp/1024x574/img6.jpg" alt="Image description">
-
-              <div class="text-center g-pa-40">
-                <h4 class="h6 text-uppercase g-font-weight-700 g-color-white g-mb-15">Projects of resdential buildings</h4>
-                <p class="g-font-size-default g-color-white-opacity-0_5 mb-0">Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
-              </div>
-            </div>
-
-            <div class="js-slide">
-              <img class="img-fluid" src="assets/img-temp/1024x574/img1.jpg" alt="Image description">
-
-              <div class="text-center g-pa-40">
-                <h4 class="h6 text-uppercase g-font-weight-700 g-color-white g-mb-15">Projects of resdential buildings</h4>
-                <p class="g-font-size-default g-color-white-opacity-0_5 mb-0">Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
-              </div>
-            </div>
-
-            <div class="js-slide">
-              <img class="img-fluid" src="assets/img-temp/1024x574/img2.jpg" alt="Image description">
-
-              <div class="text-center g-pa-40">
-                <h4 class="h6 text-uppercase g-font-weight-700 g-color-white g-mb-15">Projects of resdential buildings</h4>
-                <p class="g-font-size-default g-color-white-opacity-0_5 mb-0">Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
-              </div>
-            </div>
-
-            <div class="js-slide">
-              <img class="img-fluid" src="assets/img-temp/1024x574/img3.jpg" alt="Image description">
-
-              <div class="text-center g-pa-40">
-                <h4 class="h6 text-uppercase g-font-weight-700 g-color-white g-mb-15">Projects of resdential buildings</h4>
-                <p class="g-font-size-default g-color-white-opacity-0_5 mb-0">Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
-              </div>
+              <!-- End Tab panes -->
             </div>
           </div>
         </div>
